# rust-htmx

./: Cargo.toml
css/: index.css
src/: main.rs
templates/: contact.html  display.html  form.html  index.html  oob-contact.html
